[package]
name = "turing_rs"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
ffi = "0.1.1"
glam = "0.30.8"
serde_json = "1.0.145"
wasmtime = "37.0.1"
wasmtime-wasi = "37.0.1"
wat = "1.239.0"
tokio = "1.48.0"

[dev-dependencies]
wasmprinter = "0.239.0"

[profile.release]
strip = true
lto = true
opt-level = 3



