[package]
name = "turing"
version = "0.7.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["wasm", "lua"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
lua = ["dep:mlua"]
# Enables registration of global-based FFI functions for all engines
global_ffi = []

[[bench]]
name = "wasm_api_bench"
harness = false

[[bench]]
name = "lua_api_bench"
harness = false


[dependencies]
anyhow = "1.0"
serde_json = "1.0"

wasmtime = { version = "39.0", optional = true }
wasmtime-wasi = { version = "39.0", optional = true }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }

# todo: necessary?
tokio = "1.48.0"

slotmap = "1"
num_enum = "0.7.5"
smallvec = "1"
parking_lot = "0.12.5"
rustc-hash = "2"
convert_case = "0.10.0"

[dev-dependencies]
# for testing with wasmtime
wat = { version = "1.239.0" }
wasmprinter = {version = "0.243.0" }

serial_test = "3.2.0"
criterion = "0.8"
