[package]
name = "turing"
version = "0.8.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "turing_rs"

[profile.release]
strip = true
lto = true
opt-level = 3

split-debuginfo = "packed"
debug = "line-tables-only"
panic = "abort"
codegen-units = 1

[features]
default = ["wasm", "lua", "global_ffi"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
lua = ["dep:mlua"]
# Enables registration of global-based FFI functions for all engines
global_ffi = []

[[bench]]
name = "wasm_api_bench"
harness = false

[[bench]]
name = "lua_api_bench"
harness = false


[dependencies]
anyhow = {version = "1.0", features = ["backtrace"] }
serde_json = "1.0.149"
glam = "0.30.10"

wasmtime = { version = "40.0.1", optional = true }
wasmtime-wasi = { version = "40.0.1", optional = true }
mlua = { version = "0.11.5", features = ["lua54", "vendored"], optional = true }

# todo: necessary?
tokio = "1.49.0"

slotmap = "1"
num_enum = "0.7.5"
smallvec = "1"
parking_lot = "0.12.5"
rustc-hash = "2"
convert_case = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
# for testing with wasmtime
wat = { version = "1.244.0" }
wasmprinter = {version = "0.244.0" }

serial_test = "3.2.0"
criterion = "0.8"
